2018-11-02  0.96    Initial release