@@ -1,6 +1,6 @@
 .\" Manpage for mlen
 .\" Contact:  hendrie.james@gmail.com
-.TH man 1 "November 2018" "mlen version 0.96" "mlen manual page"
+.TH man 1 "November 2018" "mlen version 0.98" "mlen manual page"
 .SH NAME
 mlen \- A bash script that tallies media runtime
 
@@ -17,6 +17,21 @@ playtime of a given number of media files.
 
 -V or --version
     Print version and author information
+
+-v
+    Verbose output
+
+-s
+    Print totals as seconds, with milliseconds
+
+-S
+    Print totals as seconds, without milliseconds
+
+-n
+    Print total number of files tallied (default)
+
+-N
+    Do NOT print number of files tallied
 
 
 .SH EXAMPLES
