@@ -1,12 +1,12 @@
 #!/bin/bash
 #===============================================================================
-#   mlen.sh     |   version 0.96    |   zlib license    |   2018-11-02
+#   mlen.sh     |   version 0.98    |   zlib license    |   2018-11-03
 #   James Hendrie                   |   hendrie.james@gmail.com
 #
 #   This script will calculate the media playtime of a given file(s), directory
 #   or playlist (m3u or pls).
 #===============================================================================
-VERSION="0.96"
+VERSION="0.98"
 
 
 ##  Make sure we have the programs we need
@@ -23,11 +23,12 @@ done
 ##  Make sure we have at least one argument
 if [[ $# -lt 1 ]]; then
     echo "ERROR:  Incorrect usage." 1>&2
-    echo "Usage:  mlen.sh DIRECTORY" 1>&2
+    echo "Usage:  mlen.sh [OPTIONS] DIRECTORY" 1>&2
     echo "or" 1>&2
-    echo "        mlen.sh FILE[s]" 1>&2
+    echo "        mlen.sh [OPTIONS] FILE[s]" 1>&2
     exit 1
 fi
+
 
 
 ##  Arrays of formats we give a shit about
@@ -63,6 +64,16 @@ function print_help {
     done
 
     echo -e "\n"
+    echo "Optional arguments:"
+    echo -e "  -h or --help\t\tPrint this help text"
+    echo -e "  -V or --version\tPrint version and author info"
+    echo -e "  -v\t\t\tEnable extra verbose output"
+    echo -e "  -s\t\t\tPrint totals as seconds, with milliseconds"
+    echo -e "  -S\t\t\tPrint totals as seconds, without milliseconds (floored)"
+    echo -e "  -n\t\t\tPrint the number of files tallied (default on)"
+    echo -e "  -N\t\t\tDo NOT print number of files tallied"
+
+    echo ""
     echo "WARNING:  It's slow if you're going over tons of files.  Be patient."
 }
 
@@ -71,6 +82,68 @@ function print_version {
     echo "mlen.sh, version $VERSION"
     echo "James Hendrie <hendrie.james@gmail.com>"
 }
+
+
+##  Some global options
+
+#   Be verbose, 0 = false, 1 = true
+verbose=0
+
+#   Print only seconds, 0 = false, 1 = true with ms, 2 = true without ms
+onlySeconds=0
+
+##  Print the number of files, 0 = false, 1 = true (default 1)
+printNumFiles=1
+
+
+##  Check the args
+##  Args:
+##  h   print help
+##  V   print version and author info
+##  v   enable extra verbosity
+##  s   print only seconds (with ms)
+##  S   print only seconds (without ms)
+
+##  As a side note, I have no idea why the hell I can't get getopts (with an s)
+##  to work.  It never stops bugging out on me ;-;
+OPTS=$(getopt -n "$0" -o hVvsSnN -l "help,version" -- "$@")
+if [[ $? -ne 0 ]]; then
+    echo "ERROR:  Could not process arguments" 1>&2
+    exit 1
+fi
+
+eval set -- "$OPTS"
+
+while true; do
+    case "$1" in
+        -h|--help)
+            print_help
+            exit 0
+            shift;;
+        -V|--version)
+            print_version
+            exit 0
+            shift;;
+        -v)
+            verbose=1
+            shift;;
+        -s)
+            onlySeconds=1
+            shift;;
+        -S)
+            onlySeconds=2
+            shift;;
+        -n)
+            printNumFiles=1
+            shift;;
+        -N)
+            printNumFiles=0
+            shift;;
+        --)
+            shift
+            break;;
+    esac
+done
 
 
 ##  Get the length of a file and echo it out
@@ -88,6 +161,10 @@ function get_file_length {
 ##  Args
 ##  1   Number of files (string)
 function print_num_files {
+    if [[ $verbose -eq 1 ]]; then
+        echo ""
+    fi
+
     if [[ "$(echo "${numFiles} < 2" | bc)" = "1" ]]; then
         echo -ne "${numFiles} file\t\t"
     elif [[ "$(echo "${numFiles} < 10" | bc)" = 1 ]]; then
@@ -103,24 +180,31 @@ function print_num_files {
 ##  1   Seconds (string)
 function parse_seconds {
 
-    ##  The number of seconds without the fractional bit
-    secs="$(echo "$1" | cut -f1 -d'.')"
+    if [[ $onlySeconds -eq 0 ]]; then
+        ##  The number of seconds without the fractional bit
+        secs="$(echo "$1" | cut -f1 -d'.')"
 
-    ##  The last little bit, separated from the seconds
-    fraq="$(echo "$1" | cut -f2 -d'.' | head -c2)"
+        ##  The last little bit, separated from the seconds
+        fraq="$(echo "$1" | cut -f2 -d'.' | head -c2)"
 
-    ##  Number of seconds in a day minus one
-    secLimit="$(echo "(60 * 60 * 24) - 1" | bc)"
+        ##  Number of seconds in a day minus one
+        secLimit="$(echo "(60 * 60 * 24) - 1" | bc)"
 
-    ##  If we've hit one or more days' time,
-    if [[ "$(echo "${1} > ${secLimit}" | bc)" -eq 1 ]]; then
-        printf '%02dd:%02dh:%02dm:%02d.%ds\n' $(($secs/86400)) \
-            $(($secs%86400/3600)) $(($secs%3600/60)) $(($secs%60)) $fraq
+        ##  If we've hit one or more days' time,
+        if [[ "$(echo "${1} > ${secLimit}" | bc)" -eq 1 ]]; then
+            printf '%02dd:%02dh:%02dm:%02d.%ds\n' $(($secs/86400)) \
+                $(($secs%86400/3600)) $(($secs%3600/60)) $(($secs%60)) $fraq
 
-    ##  If we're still under a day
-    else
-        printf '%02dh:%02dm:%02d.%ds\n' $(($secs/3600)) \
-            $(($secs%3600/60)) $(($secs%60)) $fraq
+        ##  If we're still under a day
+        else
+            printf '%02dh:%02dm:%02d.%ds\n' $(($secs/3600)) \
+                $(($secs%3600/60)) $(($secs%60)) $fraq
+        fi
+
+    elif [[ $onlySeconds -eq 1 ]]; then
+        echo "$1"
+    elif [[ $onlySeconds -eq 2 ]]; then
+        echo "$(echo "$1" | cut -f1 -d'.')"
     fi
 
     ##  Also just show the raw number of seconds
@@ -140,12 +224,25 @@ function media_length_playlist {
     ##  Use ffprobe and bc to tally a number of seconds per line in the file
     while read FILE; do
         fLen="$(get_file_length "$FILE")"
+
+        if [[ $verbose -eq 1 ]]; then
+            vLen="$(parse_seconds "$fLen")"
+            echo -e "$vLen\t$FILE"
+        fi
+
         len="$(echo "${len} + ${fLen}" | bc)"
         numFiles="$(echo "${numFiles} + 1" | bc)"
     done <<< "$(cat "$playlist")"
 
+    if [[ $verbose -eq 1 ]]; then
+        echo ""
+    fi
+
+    if [[ $printNumFiles -ne 0 ]]; then
+        print_num_files "$numFiles"
+    fi
+
     ##  Print out the number of seconds in a nicer way
-    print_num_files "$numFiles"
     parse_seconds "$len"
 }
 
@@ -170,17 +267,33 @@ function media_length_files {
     fi
 
 
-    ##  If it wasn't a playlist, we just run through the given files, tallying
-    ##  up the total with ffprobe and bc
+    ##  If it wasn't a playlist, we just run through the given files,
+    ##  tallying up the total with ffprobe and bc
     for FILE in "${@}"; do
         fLen="$(get_file_length "$FILE")"
+
+        if [[ $verbose -eq 1 ]]; then
+            vLen="$(parse_seconds "$fLen")"
+            echo -e "$vLen\t$FILE"
+        fi
+
         len="$(echo "${len} + ${fLen}" | bc)"
         numFiles="$(echo "${numFiles} + 1" | bc)"
     done
 
-    print_num_files "$numFiles"
+    if [[ $verbose -eq 1 ]]; then
+        echo ""
+    fi
+
+
+    if [[ $printNumFiles -ne 0 ]]; then
+        print_num_files "$numFiles"
+    fi
+
     parse_seconds "$len"
 }
+
+
 
 ##  Get the length of all valid files in a given directory
 ##  Args
@@ -217,18 +330,8 @@ function media_length_directory {
 
 if [[ $# -eq 1 ]]; then
 
-    ##  Do they want help?
-    if [[ "$1" = "-h" ]] || [[ "$1" = "--help" ]]; then
-        print_help
-        exit 0
-
-    ##  Do they want to send me nudes?
-    elif [[ "$1" = "-V" ]] || [[ "$1" = "--version" ]]; then
-        print_version
-        exit 0
-
     ##  Is it a directory?
-    elif [[ -d "$1" ]]; then
+    if [[ -d "$1" ]]; then
         media_length_directory "$1"
 
     ##  Is it just one regular-ass file?
